--- a/RoadTripBG/AndroidManifest.xml
+++ b/RoadTripBG/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
+    
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -16,15 +18,16 @@
         <activity
             android:name="com.roadtripbg.activities.SearchActivity"
             android:label="@string/app_name" >
+            
+        </activity>
+        <activity
+            android:name="com.roadtripbg.activities.MainActivity"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name="com.roadtripbg.activities.MainActivity"
-            android:label="@string/app_name" >
         </activity>
     </application>
 
